--- a/tools/entwicklungsbericht.html
+++ b/tools/entwicklungsbericht.html
@@ -17,20 +17,22 @@
 
     <!-- Main Content -->
     <main class="main-content" id="main-content" style="display: none;">
-      <h1 class="page-title">Entwicklungsbericht</h1>
-      <p class="page-description">
-        Umfassender Entwicklungsbericht für Kinder in der Kita. 
-        Dokumentiert Fortschritte in allen Entwicklungsbereichen.
-      </p>
-      
-      <!-- Tool Content -->
-      <div class="tool-content">
+      <div class="content-wrapper">
+        <h1 class="page-title">Entwicklungsbericht</h1>
+        <p class="page-description">
+          Umfassender Entwicklungsbericht für Kinder in der Kita. 
+          Dokumentiert Fortschritte in allen Entwicklungsbereichen.
+        </p>
+        
+        <!-- Tool Content -->
+        <div class="tool-content">
         <iframe src="../../kidos2025/eb.html" 
                 width="100%" 
                 height="800" 
                 frameborder="0"
                 title="Entwicklungsbericht">
         </iframe>
+        </div>
       </div>
     </main>
 
