--- a/tools/entwicklungseinschaetzung.html
+++ b/tools/entwicklungseinschaetzung.html
@@ -17,20 +17,22 @@
 
     <!-- Main Content -->
     <main class="main-content" id="main-content" style="display: none;">
-      <h1 class="page-title">Entwicklungseinschätzung</h1>
-      <p class="page-description">
-        Spezialisierte Einschätzung für soziales, emotionales Verhalten 
-        und ADHS/ADS/ASS-Screening.
-      </p>
-      
-      <!-- Tool Content -->
-      <div class="tool-content">
+      <div class="content-wrapper">
+        <h1 class="page-title">Entwicklungseinschätzung</h1>
+        <p class="page-description">
+          Spezialisierte Einschätzung für soziales, emotionales Verhalten 
+          und ADHS/ADS/ASS-Screening.
+        </p>
+        
+        <!-- Tool Content -->
+        <div class="tool-content">
         <iframe src="../../kidos2025/ein.html" 
                 width="100%" 
                 height="800" 
                 frameborder="0"
                 title="Entwicklungseinschätzung">
         </iframe>
+        </div>
       </div>
     </main>
 
