--- a/tools/entwicklungseinschaetzung.html
+++ b/tools/entwicklungseinschaetzung.html
@@ -39,6 +39,9 @@
     <!-- Access Denied -->
     <div id="access-denied" class="login-modal-bg">
       <div class="login-modal-box">
+        <div class="login-modal-logo">
+          <img src="../gfx/Kidos-logo.png" alt="Kidos Logo" class="modal-logo-image" />
+        </div>
         <h2 class="login-modal-title">Zugriff verweigert</h2>
         <p class="login-modal-text">Sie müssen sich über die Hauptseite anmelden, um auf diese Seite zugreifen zu können.</p>
         <button onclick="window.location.href='../index.html'" class="login-submit-btn">Zur Anmeldung</button>
