Gelbes Farbschema als CSS-Variablen ergänzt und Sprachstand-Tool auf System umgestellt

--- a/tools/sprachstand.html
+++ b/tools/sprachstand.html
@@ -158,7 +158,7 @@ FORMAT:
 5. Positiver Ausblick
 
 Achte besonders darauf, dass die Einschätzung Eltern und Fachkräfte ermutigt und das Kind in seinen sprachlichen Entwicklungsmöglichkeiten bestärkt.</div>
-            <button onclick="copyPromptToClipboard()" class="tool-button" style="margin-top: 15px; background-color: #f7ca18; border-color: #b7950b; color: #7d6608;">
+            <button onclick="copyPromptToClipboard()" class="tool-button" style="margin-top: 15px;">
               Prompt kopieren
             </button>
           </div>
